# termimail

./: .gitignore  Cargo.toml  LICENSE  README.md  _data.json  data.json
src/: data_struct.rs  errors.rs  main.rs
src/api/: create_account.rs  create_token.rs  delete_account_by_id.rs  get_account_by_id.rs  get_domains.rs  get_message_by_id.rs  get_messages.rs  mod.rs
src/api/types/: account_info.rs  account_response.rs  full_message_response.rs  messages_response.rs  mod.rs
src/features/: current_account.rs  delete_account.rs  fetch_emails.rs  generate_email.rs  mod.rs
src/utils/: mod.rs  open_email.rs
