[package]
name = "termimail"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate temporary email domains from your terminal with ease"
authors = ["Nicolás Leal <lealnicolas96@gmail.com>"]
repository = "https://github.com/nicolasleal570/termimail"

[[bin]]
name = "termimail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
inquire = { version = "0.7.5", features = ["date"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0.2"
